# snapshottesting

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  qpm.json  snapshot_init.h  snapshots.json  snapshottesting.cpp  snapshottesting.h  snapshottesting.pri  snapshottesting.qrc  snapshottestingadapter.cpp  snapshottestingrenderer.cpp  snapshottestingrenderer.h  snapshottestingrule.cpp  snapshottestingtest.cpp  snapshottestingtest.h
SnapshotTesting/: Matcher.qml  MatcherContentView.qml  ScaleToFitImage.qml  ScreenshotBrowser.qml  SnapshotTesting.qml
SnapshotTesting/config/: snapshot-config.json
examples/example1/: exmaple1.pro  main.cpp  tst_demo1.qml
examples/exampleCmake/: CMakeLists.txt  README.md  exmaple1.pro  main.cpp
private/: snapshottesting_p.h  snapshottestingoptions.h  snapshottestingrenderer.h
tests/snapshottestingunittests/: README.md  main.cpp  qpm.json  snapshot-default-values.json  snapshots.json  snapshottestingunittests.pro  snapshottests.cpp  snapshottests.h  testcases.cpp  testcases.h
tests/snapshottestingunittests/qmltests/: tst_SnapshotTesting.qml
tests/snapshottestingunittests/sample/: Sample1.qml  Sample8.qml  Sample9.qml  Sample_Control1.qml  Sample_Loader_Async.qml
